# NeuroSyncApp

./: .gitignore  CHANGELOG.md  README.md  REFACTOR_PLAN_telemetry.md  envirnoment.yml  environment.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-app.yml
example_data/menopause_photometry/: Act 23-9-20.xlsx  Temp 23-9-20.xlsx
example_data/menopause_stim/: Act 24-3-27.xlsx  ST1 24-3-27.csv  Temp 24-3-27.xlsx
example_data/photometry_behaviour/: example_coding_behaviour.csv
requirements/: README.md  macos-py314.txt  windows-py314.txt
src/: align_photometry_behaviour.py  align_telemetry_opto_photom.py  app_dashboard.py  app_settings_manager.py  behaviour_event_input_frame.py  combine_data_stats.py  data_selection_frame.py  default_dirs.py  export_options_container.py  graph_settings_container.py  main_app.py  static_inputs_frame.py  window_utils.py
src/app/: __init__.py  catalog.py  dashboard.py  main.py
src/core/: app_settings_manager.py  app_state.py  settings_defaults.py  settings_store.py  ttk_styles.py
src/data/: json_handler.py
src/dfer/: __init__.py  analysis.py  df_common.py  df_dual.py  df_plots.py  df_single.py  pfer.py  plotting.py
src/excel_ops/: behaviour_exporter.py
src/features/: __init__.py
src/file_management/: clear_previous_data.py  file_loader.py  select_file.py
src/main_apps/: align_photometry_behaviour.py  align_telemetry_photom_opto.py  raw_photometry_processing_app.py  raw_photometry_processing_qt.py
src/shared/: __init__.py
(+164 files in other folders)
